--- a/pipelines/pipeline_templates/csv_ingestion_template.ipynb
+++ b/pipelines/pipeline_templates/csv_ingestion_template.ipynb
@@ -380,7 +380,7 @@
    },
    "source": [
     "%md\n",
-    "### [User Input Required] Optional Transformations"
+    "### [User Input Required] Optional Transformations (SQL or Python)"
    ]
   },
   {
@@ -500,13 +500,11 @@
     "# [User Input Required] Result DataFrame\n",
     "output_df = _sqldf\n",
     "\n",
-    "# [User Input Required] Target Location\n",
+    "# [User Input Required] Target Location and Write Configuration\n",
+    "write_mode = WriteMode.UC_EXTERNAL_TABLE\n",
+    "trigger_mode = TriggerMode.BATCH\n",
     "datalake_location: str = \"\"\n",
     "uc_namespace: str = \"\"\n",
-    "\n",
-    "# [User Input Required] Configs\n",
-    "write_mode = WriteMode.APPEND\n",
-    "trigger_mode = TriggerMode.BATCH\n",
     "\n",
     "# [User Input Required]  Instantiate writer classs instance\n",
     "csv_writer: AutoloaderDeltaWriter = AutoloaderDeltaWriter(\n",
