--- a/pipelines/pipeline_templates/csv_ingestion_template.ipynb
+++ b/pipelines/pipeline_templates/csv_ingestion_template.ipynb
@@ -14,9 +14,13 @@
    "source": [
     "### [User Input Required] Read CSV Source with Autoloader.\n",
     "\n",
-    "Autoloader Options for CSV: https://docs.databricks.com/en/ingestion/auto-loader/options.html#csv-options\n",
+    "__Common data loading patterns__: https://docs.databricks.com/en/ingestion/auto-loader/patterns.html\n",
     "\n",
-    "Common Autoloader Options: https://docs.databricks.com/en/ingestion/auto-loader/options.html#common-auto-loader-options"
+    "__Autoloader Options for CSV__: https://docs.databricks.com/en/ingestion/auto-loader/options.html#csv-options\n",
+    "\n",
+    "__Common Autoloader Options__: https://docs.databricks.com/en/ingestion/auto-loader/options.html#common-auto-loader-options\n",
+    "\n",
+    "__Schema Evolution Modes__: https://docs.databricks.com/en/ingestion/auto-loader/schema.html#how-does-auto-loader-schema-evolution-work"
    ]
   },
   {
