--- a/pipelines/pipeline_templates/csv_ingestion_template.ipynb
+++ b/pipelines/pipeline_templates/csv_ingestion_template.ipynb
@@ -46,6 +46,11 @@
     "# [User Input Required] Set the ingest location.\n",
     "ingest_location = \"dbfs:/databricks-datasets/nyctaxi/tripdata/yellow\"\n",
     "\n",
+    "# [User Input Required] Configure schema evolution and rescue data.\n",
+    "schema_evolution_mode = \"addNewColumns\"\n",
+    "rescue_data_column_name = \"_rescued_data\"\n",
+    "\n",
+    "\n",
     "# Auto-Generate Schema Location Based on Ingest Location\n",
     "autoloader_schema_location = generated_autoloader_schema_path(ingest_location)\n",
     "print(\"Autoloader Schema Location: \" +autoloader_schema_location)\n",
